[gd_scene load_steps=4 format=3 uid="uid://df2wmgrvswi6v"]

[ext_resource type="Script" path="res://scripts/oven_hud.gd" id="1_5y6tr"]
[ext_resource type="Texture2D" uid="uid://ct6xk5jx30a4r" path="res://assets/sprites/ui/text_background.png" id="2_qprpe"]
[ext_resource type="FontFile" uid="uid://dkkcghmt6x15g" path="res://assets/fonts/title_font.ttf" id="3_7w67v"]

[node name="OvenHUD" type="CanvasLayer"]
script = ExtResource("1_5y6tr")

[node name="TextBG" type="Sprite2D" parent="."]
modulate = Color(0.546408, 1.69661e-06, 2.88785e-07, 1)
position = Vector2(641, 267)
scale = Vector2(27, 6)
texture = ExtResource("2_qprpe")

[node name="TimerBG" type="Sprite2D" parent="."]
modulate = Color(0.546408, 1.69661e-06, 2.88785e-07, 1)
position = Vector2(641, 134)
scale = Vector2(5.81, 3.9475)
texture = ExtResource("2_qprpe")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -389.0
offset_top = 235.0
offset_right = 390.0
offset_bottom = 300.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_7w67v")
theme_override_font_sizes/font_size = 29
text = "Dodge The Flames & Survive 
Until The Clock Hits Zero!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownMessage" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 113.0
offset_right = 22.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_7w67v")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="MessageTimer" type="Timer" parent="."]

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 23.0
offset_right = 79.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7w67v")
theme_override_font_sizes/font_size = 30
text = "Try Again?"

[node name="BackButton" type="Button" parent="."]
visible = false
offset_left = 428.0
offset_top = 134.0
offset_right = 475.0
offset_bottom = 158.0
scale = Vector2(1.68, 1.68)
theme_override_fonts/font = ExtResource("3_7w67v")
text = "Back"

[node name="OvenSFX" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
